# zcp

./: .gitignore  AGPL-3  Makefile.am  RELNOTES.txt  TEST.txt  bootstrap.sh  configure.ac  versionheader.sh
ECtools/: Makefile.am
ECtools/admin/: Makefile.am  zarafa-admin.cpp
ECtools/archiver/: ArchiveControlImpl.cpp  ArchiveControlImpl.h  ArchiveManage.h  ArchiveManageImpl.cpp  ArchiveStateCollector.cpp  ArchiveStateUpdater.cpp  Archiver.cpp  ArchiverImpl.cpp  ArchiverSession.cpp  ECArchiverLogger.cpp  ECDatabase.cpp  ECDatabase.h  Makefile.am  main.cpp
ECtools/backup-plus/: Makefile.am  README  TODO.txt  backup.cfg  zarafa-backup  zarafa-restore
ECtools/backup-plus/zarafa_backup/: __init__.py  backup.py  restore.py
ECtools/cfgchecker/: DAgentConfigCheck.cpp  DAgentConfigCheck.h  ECConfigCheck.cpp  ECConfigCheck.h  IcalConfigCheck.cpp  LDAPConfigCheck.cpp  LDAPConfigCheck.h  ServerConfigCheck.cpp  ServerConfigCheck.h  SpoolerConfigCheck.cpp  SpoolerConfigCheck.h  UnixConfigCheck.cpp  UnixConfigCheck.h  zarafa-cfg.cpp
ECtools/search/: Makefile.am  zarafa-search-xapian-compact.py
ECtools/search/zarafa_search/: __init__.py  plugin_xapian.py
autoconf/: boost.m4
caldav/: CalDAV.cpp  CalDavProto.cpp  CalDavProto.h  CalDavUtil.cpp  CalDavUtil.h  Http.cpp  Http.h  Makefile.am  ProtocolBase.cpp  ProtocolBase.h  WebDav.cpp  WebDav.h  iCal.cpp  iCal.h
common/: ConsoleTable.cpp  ConsoleTable.h  ECABEntryID.cpp  ECABEntryID.h  ECACL.cpp  ECACL.h  ECCache.cpp  ECCache.h  ECChannel.cpp  ECChannel.h  ECChannelClient.cpp  ECChannelClient.h  ECConfig.cpp  ECConfig.h  ECConfigImpl.cpp  ECConfigImpl.h  ECDatabaseMySQL.cpp  ECDatabaseMySQL.h  ECDebug.cpp  ECDebug.h  ECDebugPrint.cpp  ECDebugPrint.h  ECFifoBuffer.cpp  ECFifoBuffer.h  ECFifoStream.cpp  ECFifoStream.h  ECGetText.cpp  ECGetText.h  ECGuid.cpp  ECGuid.h  ECIConv.cpp  ECIConv.h  ECKeyTable.cpp  ECKeyTable.h  ECLogger.cpp  ECLogger.h  ECMemStream.cpp  ECMemStream.h  ECScheduler.cpp  ECScheduler.h  (+53 more)
common/include/zarafa/: ECChannel.h  ECConfig.h  ECDebug.h  ECDebugPrint.h  ECKeyTable.h  ECLogger.h  ECScheduler.h  ECThreadPool.h  ECUnknown.h  Makefile.am  Trace.h  UnixUtil.h  ZarafaCode.h  base64.h  platform.h  platform.linux.h  stringutil.h  threadutil.h  ustringutil.h  zcdefs.h
common/include/zarafa/charset/: convert.h  convstring.h  traits.h  utf16string.h  utf8string.h
doc/: Makefile.am  manual.xml
gateway/: ClientProto.h  Gateway.cpp  IMAP.cpp  IMAP.h  Makefile.am  POP3.cpp  POP3.h
inetmapi/: ECMapiUtils.cpp  ECMapiUtils.h  ECVMIMEUtils.cpp  ECVMIMEUtils.h  MAPISMTPTransport.cpp  MAPISMTPTransport.h  MAPIToVMIME.cpp  MAPIToVMIME.h  Makefile.am  SMIMEMessage.cpp  SMIMEMessage.h  VMIMEToMAPI.cpp  VMIMEToMAPI.h  inetmapi.cpp  inetmapi.h  inputStreamMAPIAdapter.cpp  inputStreamMAPIAdapter.h  mapiAttachment.cpp  mapiAttachment.h  mapiTextPart.cpp  mapiTextPart.h  options.h  outputStreamMAPIAdapter.cpp  outputStreamMAPIAdapter.h  tnef.cpp  tnef.h
installer/: Makefile.am
libfreebusy/: ECEnumFBBlock.cpp  ECEnumFBBlock.h  ECFBBlockList.cpp  ECFBBlockList.h  ECFreeBusyData.cpp  ECFreeBusyData.h  ECFreeBusySupport.cpp  ECFreeBusySupport.h  ECFreeBusyUpdate.cpp  ECFreeBusyUpdate.h  PublishFreeBusy.cpp  PublishFreeBusy.h  freebusy.h  freebusyguid.h  freebusytags.h  freebusyutil.cpp  freebusyutil.h  recurrence.cpp  recurrence.h
libicalmapi/: ICalToMAPI.cpp  ICalToMAPI.h  MAPIToICal.cpp  MAPIToICal.h  icalinit.cpp  icalitem.h  icalmapi.h  icalrecurrence.cpp  icalrecurrence.h  icaluid.cpp  icaluid.h  nameids.cpp  nameids.h  valarm.cpp  valarm.h  vconverter.cpp  vconverter.h  vevent.cpp  vevent.h  vfreebusy.cpp  vfreebusy.h  vtimezone.cpp  vtimezone.h  vtodo.cpp  vtodo.h
librosie/: Makefile.am  librosie.cpp  librosie.h
m4lcommon/: CommonUtil.cpp  CommonUtil.h  ECDefs.h  ECFeatureList.h  ECFeatures.cpp  ECFeatures.h  ECInterfaceDefs.h  ECInvariantChecker.h  ECIterators.cpp  ECIterators.h  ECMAPIDebug.cpp  ECMAPIDebug.h  ECMemTable.cpp  ECMemTable.h  ECRestriction.cpp  ECRestriction.h  HrException.h  IECChangeAdviseSink.h  IECChangeAdvisor.h  IECExchangeModifyTable.h  IECExportAddressbookChanges.h  IECExportChanges.h  IECImportAddressbookChanges.h  IECImportContentsChanges.h  IECImportHierarchyChanges.h  IECLicense.h  IECMultiStoreTable.h  IECSecurity.h  IECServiceAdmin.h  IECSingleInstance.h  IECSpooler.h  IECStatsCollector.h  IECTestProtocol.h  IECUnknown.h  IMAPIOffline.h  MAPIConsoleTable.cpp  MAPIConsoleTable.h  MAPINotifSink.cpp  MAPINotifSink.h  Makefile.am  (+14 more)
m4lcommon/include/zarafa/: CommonUtil.h  ECDefs.h  ECInterfaceDefs.h  ECMemTable.h  ECRestriction.h  ECTags.h  EMSAbTag.h  IECSecurity.h  IECServiceAdmin.h  Makefile.am  RecurrenceState.h  Util.h  auto_free.h  mapi_ptr.h  mapiext.h  mapiguidext.h  namedprops.h  restrictionutil.h  userutil.h
m4lcommon/include/zarafa/mapi_ptr/: mapi_array_ptr.h  mapi_memory_ptr.h  mapi_object_ptr.h  mapi_rowset_ptr.h
m4lcommon/mapi_ptr/: mapi_array_ptr.h  mapi_memory_ptr.h  mapi_object_ptr.h  mapi_rowset_ptr.h
php-ext/: ECImportContentsChangesProxy.cpp  ECImportContentsChangesProxy.h  ECImportHierarchyChangesProxy.cpp  ECImportHierarchyChangesProxy.h  ECRulesTableProxy.cpp  ECRulesTableProxy.h  globals.h  main.cpp  main.h  phpconfig.h  typeconversion.cpp  typeconversion.h  util.cpp  util.h
php-webclient-ajax/: config.php.dist  debug.php  defaults.php  index.php  static.php  zarafa.php
spooler/: DAgent.cpp  LMTP.cpp  LMTP.h  Makefile.am  PyMapiPlugin.cpp  PyMapiPlugin.h  Spooler.cpp  archive.cpp  archive.h  mailer.cpp  mailer.h  rules.cpp  rules.h  spmain.h
swig/: ECLogger.i  IECServiceAdmin.i  Makefile.am  RecurrenceState.i  RecurrenceState.swig.h  archiver.i  director_util.cpp  ecdefs.i  helpers.i  inetmapi.i  libcommon.i  libfreebusy.i  mapi.i  swig_iunknown.h
tools/: ifnullfree.cocci
zarafa-libsync/: ECLibSync.h  ECOfflineABImporter.cpp  ECOfflineABImporter.h  ECResyncSet.cpp  ECResyncSet.h  ECSync.cpp  ECSync.h  ECSyncContext.cpp  ECSyncContext.h  ECSyncLog.cpp  ECSyncLog.h  ECSyncSettings.cpp  ECSyncSettings.h  ECSyncUtil.cpp  ECSyncUtil.h
(+814 files in other folders)
