# -*- Makefile -*-

noinst_SCRIPTS = zarafa-backup zarafa-restore

EXTRA_DIST = setup.py \
	zarafa_backup/__init__.py \
	zarafa_backup/backup.py \
	zarafa_backup/restore.py

#install-exec-local:
#	cd ${srcdir} && ${PYTHON} setup.py install -f \
#		$${DESTDIR+--root=${DESTDIR}} \
#		--prefix ${prefix} --install-purelib ${pythondir}
