# -*- Makefile -*-

nobase_pkginclude_HEADERS = \
	ECConfig.h ECGuid.h ECLogger.h ZarafaCode.h \
	base64.h ecversion.h md5.h my_getopt.h platform.h platform.linux.h \
	threadutil.h ustringutil.h zcdefs.h \
	charset/convert.h charset/convstring.h \
	charset/traits.h charset/utf8string.h charset/utf16string.h

EXTRA_DIST = ecversion.h
