# -*- Makefile -*-

nobase_pkginclude_HEADERS = \
	ECChannel.h ECConfig.h ECGuid.h ECLogger.h ECScheduler.h ZarafaCode.h \
	base64.h ecversion.h md5.h my_getopt.h platform.h platform.linux.h \
	stringutil.h threadutil.h ustringutil.h zcdefs.h \
	charset/convert.h charset/convstring.h \
	charset/traits.h charset/utf8string.h charset/utf16string.h

EXTRA_DIST = ecversion.h
