# -*- Makefile -*-

nobase_pkginclude_HEADERS = \
	ECChannel.h ECConfig.h ECDebug.h ECDebugPrint.h \
	ECGetText.h ECGuid.h ECKeyTable.h ECLogger.h ECScheduler.h \
	ECUnknown.h MAPIErrors.h Trace.h UnixUtil.h ZarafaCode.h \
	base64.h ecversion.h md5.h my_getopt.h platform.h platform.linux.h \
	stringutil.h threadutil.h ustringutil.h zcdefs.h \
	charset/convert.h charset/convstring.h \
	charset/traits.h charset/utf8string.h charset/utf16string.h

EXTRA_DIST = ecversion.h
