# -*- Makefile -*-

nobase_pkginclude_HEADERS = \
	CommonUtil.h \
	ECDefs.h ECTags.h EMSAbTag.h \
	IECLicense.h IECServiceAdmin.h IECSecurity.h \
	IECSingleInstance.h IECUnknown.h Util.h boost_compat.h \
	mapiguidext.h mapi_ptr.h tstring.h userutil.h \
	mapi_ptr/mapi_array_ptr.h mapi_ptr/mapi_memory_ptr.h \
	mapi_ptr/mapi_object_ptr.h mapi_ptr/mapi_rowset_ptr.h
